--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "@types/express-session": "^1.17.9",
+    "@types/spotify-web-api-node": "^5.0.9",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/spotify-web-api-node": "^5.0.8",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "socket.io": "^4.7.2",
     "spotify-web-api-node": "^5.0.2",
     "ytdl-core": "^4.11.5",
     "ytsr": "^3.8.4"
